# WindowsBluetoothConnection

./: CMakeLists.txt  README.md
Header Files/: Constants.h  IBluetoothConnector.h  WindowsBluetoothAPI.h  WindowsBluetoothConnector.h
Source Files/: WindowsBluetoothAPI.cpp  WindowsBluetoothConnector.cpp
